fix: Resolve test data conflicts
- Updated CDU01IntegrationTest to use unique user IDs to avoid conflicts with the global seed script.
- Added --enable-preview flag to the Gradle build script to enable Java 21 preview features.
- Added missing mocks to ProcessoServiceTest.